[gd_scene load_steps=12 format=2]

[ext_resource path="res://HUD/HUDBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://HUD/HUDTheme.tres" type="Theme" id=2]
[ext_resource path="res://HUD/HUD.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.180392, 1, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="Theme" id=1]
Button/styles/hover = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.996078, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="Theme" id=4]
Button/styles/hover = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0.439216, 0.121569, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="Theme" id=6]
Button/styles/hover = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.501961, 0.482353, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="Theme" id=8]
Button/styles/hover = SubResource( 7 )

[node name="HUD" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -200.0
margin_right = -100.0
margin_bottom = 25.0
rect_min_size = Vector2( 100, 25 )
rect_scale = Vector2( 2, 2 )
text = "Score: 0"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="PopupMenu" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -125.0
margin_right = 125.0
margin_bottom = 125.0
rect_min_size = Vector2( 250, 250 )
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -0.5
margin_top = -0.5
margin_right = 0.5
margin_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUDBackground" parent="PauseMenu/NinePatchRect" instance=ExtResource( 1 )]
scale = Vector2( 9, 9 )

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -101.0
margin_right = 100.0
margin_bottom = 101.0
rect_min_size = Vector2( 200, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseLabelContainer" type="CenterContainer" parent="PauseMenu/VBoxContainer"]
margin_right = 200.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )

[node name="PausedLabel" type="Label" parent="PauseMenu/VBoxContainer/PauseLabelContainer"]
margin_left = 41.0
margin_top = 22.0
margin_right = 159.0
margin_bottom = 38.0
text = "PAUSE MENU"

[node name="CenterContainer" type="CenterContainer" parent="PauseMenu/VBoxContainer"]
margin_top = 64.0
margin_right = 200.0
margin_bottom = 104.0
rect_min_size = Vector2( 125, 40 )

[node name="RestartButton" type="Button" parent="PauseMenu/VBoxContainer/CenterContainer"]
margin_left = 37.0
margin_top = 5.0
margin_right = 162.0
margin_bottom = 35.0
rect_min_size = Vector2( 125, 30 )
text = "Restart Level"

[node name="CenterContainer2" type="CenterContainer" parent="PauseMenu/VBoxContainer"]
margin_top = 108.0
margin_right = 200.0
margin_bottom = 148.0
rect_min_size = Vector2( 125, 40 )

[node name="ChoosePlayerButton" type="Button" parent="PauseMenu/VBoxContainer/CenterContainer2"]
margin_left = 37.0
margin_top = 5.0
margin_right = 162.0
margin_bottom = 35.0
rect_min_size = Vector2( 125, 30 )
text = "Chose Dino"

[node name="CloseLabelContainer" type="CenterContainer" parent="PauseMenu/VBoxContainer"]
margin_top = 152.0
margin_right = 200.0
margin_bottom = 192.0
rect_min_size = Vector2( 125, 40 )

[node name="CloseButton" type="Button" parent="PauseMenu/VBoxContainer/CloseLabelContainer"]
margin_left = 37.0
margin_top = 5.0
margin_right = 162.0
margin_bottom = 35.0
rect_min_size = Vector2( 125, 30 )
text = "Exit"

[node name="DinoMenu" type="PopupMenu" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -75.0
margin_right = 100.0
margin_bottom = 75.0
rect_min_size = Vector2( 200, 150 )
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="DinoMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -0.5
margin_top = -0.5
margin_right = 0.5
margin_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUDBackground" parent="DinoMenu/NinePatchRect" instance=ExtResource( 1 )]
scale = Vector2( 9, 9 )

[node name="VBoxContainer" type="VBoxContainer" parent="DinoMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -75.0
margin_right = 100.0
margin_bottom = 75.0
rect_min_size = Vector2( 200, 150 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorLabel" type="Label" parent="DinoMenu/VBoxContainer"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "Choose a Color"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="DinoMenu/VBoxContainer"]
margin_top = 44.0
margin_right = 200.0
margin_bottom = 94.0
rect_min_size = Vector2( 150, 50 )
alignment = 1

[node name="GridContainer" type="GridContainer" parent="DinoMenu/VBoxContainer/HBoxContainer"]
margin_left = 23.0
margin_right = 113.0
margin_bottom = 50.0
rect_min_size = Vector2( 90, 0 )

[node name="Blue" type="Button" parent="DinoMenu/VBoxContainer/HBoxContainer/GridContainer"]
margin_right = 60.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 30 )
theme = SubResource( 1 )
text = "Blue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer2" type="GridContainer" parent="DinoMenu/VBoxContainer/HBoxContainer"]
margin_left = 117.0
margin_right = 177.0
margin_bottom = 50.0

[node name="Red" type="Button" parent="DinoMenu/VBoxContainer/HBoxContainer/GridContainer2"]
margin_right = 60.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 30 )
theme = SubResource( 4 )
text = "Red"

[node name="HBoxContainer2" type="HBoxContainer" parent="DinoMenu/VBoxContainer"]
margin_top = 98.0
margin_right = 200.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 20 )
alignment = 1

[node name="GridContainer" type="GridContainer" parent="DinoMenu/VBoxContainer/HBoxContainer2"]
margin_left = 23.0
margin_right = 113.0
margin_bottom = 30.0
rect_min_size = Vector2( 90, 0 )

[node name="Green" type="Button" parent="DinoMenu/VBoxContainer/HBoxContainer2/GridContainer"]
margin_right = 60.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 30 )
theme = SubResource( 6 )
text = "Green"

[node name="GridContainer2" type="GridContainer" parent="DinoMenu/VBoxContainer/HBoxContainer2"]
margin_left = 117.0
margin_right = 177.0
margin_bottom = 30.0

[node name="Yellow" type="Button" parent="DinoMenu/VBoxContainer/HBoxContainer2/GridContainer2"]
margin_right = 60.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 30 )
theme = SubResource( 8 )
text = "Yellow"

[connection signal="pressed" from="PauseMenu/VBoxContainer/CenterContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/CenterContainer2/ChoosePlayerButton" to="." method="_on_ChoosePlayerButton_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/CloseLabelContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="DinoMenu/VBoxContainer/HBoxContainer/GridContainer/Blue" to="." method="_on_Blue_pressed"]
[connection signal="pressed" from="DinoMenu/VBoxContainer/HBoxContainer/GridContainer2/Red" to="." method="_on_Red_pressed"]
[connection signal="pressed" from="DinoMenu/VBoxContainer/HBoxContainer2/GridContainer/Green" to="." method="_on_Green_pressed"]
[connection signal="pressed" from="DinoMenu/VBoxContainer/HBoxContainer2/GridContainer2/Yellow" to="." method="_on_Yellow_pressed"]
